changes applied